Try to fix dark mode again

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -412,9 +412,19 @@ table::-webkit-scrollbar-thumb {
   );
 }
 
-.alert--cli {
+html[data-theme='light'] .alert--cli {
   --ifm-alert-background-color-highlight: hsl(
     var(--purple-200),
+    var(15%),
+    );
+  --ifm-alert-background-color: var( --ifm-color-cli-contrast-background );
+  --ifm-alert-foreground-color: var( --ifm-color-cli-contrast-foreground );
+  --ifm-alert-border-color: var(--ifm-color-cli-dark);
+}
+
+html[data-theme='dark'] .alert--cli {
+  --ifm-alert-background-color-highlight: hsl(
+    var(--ifm-color-cli-dark);
     var(15%),
     );
   --ifm-alert-background-color: var( --ifm-color-cli-contrast-background );
